updated jquery cdn to https

--- a/public/chess-page.html
+++ b/public/chess-page.html
@@ -17,7 +17,7 @@
     <div id="myBoard" class="centered" style="width: 30%"></div>
     <div class="centered-horizontal"><p id="bottom"></p></div>
   </body>
-  <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/chess.js"></script>
   <script src="/chessboard-1.0.0.min.js"></script>
