Added footer to index and chess-page

--- a/public/chess-page.html
+++ b/public/chess-page.html
@@ -9,12 +9,28 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Chess</title>
+    <title>SocketChess - Playing</title>
   </head>
 
   <body>
     <div class="centered-horizontal"><p id="top"></p></div>
     <div id="myBoard" class="centered" style="width: 25%"></div>
+    <footer class="footer">
+      Open source project available on
+      <b
+        ><a href="https://github.com/fratorgano/SocketChess" target="_blank"
+          >GitHub</a
+        ></b
+      >
+      <br />
+      Made by
+      <b
+        ><a href="https://fratorgano.me" target="_blank"
+          >Francesco Torgano</a
+        ></b
+      >
+      © 2021
+    </footer>
   </body>
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.js"></script>
   <script src="/socket.io/socket.io.js"></script>
