--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Home</title>
+    <title>SocketChess - Home</title>
   </head>
 
   <body>
@@ -54,6 +54,22 @@
         <tbody id="rows"></tbody>
       </table>
     </div>
+    <footer class="footer">
+      Open source project available on
+      <b
+        ><a href="https://github.com/fratorgano/SocketChess" target="_blank"
+          >GitHub</a
+        ></b
+      >
+      <br />
+      Made by
+      <b
+        ><a href="https://fratorgano.me" target="_blank"
+          >Francesco Torgano</a
+        ></b
+      >
+      © 2021
+    </footer>
   </body>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/scripts/index.js"></script>
