Move algorithm implementation to Rust with Wasm

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,10 @@
             <select name="algorithm" id="Algorithm">
               <option value="random">Random</option>
               <option value="negamax">Negamax</option>
-              <option value="negamax_alphabeta">Negamax-Alpha-Beta</option>
-              <option value="iterative_deepening">Iterative deepening</option>
+              <option value="negamax_a_b">Negamax-Alpha-Beta</option>
+              <option value="negamax_a_b_table">Negamax-Alpha-Beta Table</option>
+              <option value="negamax_a_b_quiescent">Negamax-Alpha-Beta Quiescent</option>
+              <!-- <option value="iterative_deepening">Iterative deepening</option> -->
             </select>
             <br />
             <h3>Choose a Depth</h3>
