Fix board size and position

--- a/public/chess-page.html
+++ b/public/chess-page.html
@@ -14,7 +14,7 @@
 
   <body>
     <div class="centered-horizontal"><p id="top"></p></div>
-    <div id="myBoard" class="centered" style="width: 30%"></div>
+    <div id="myBoard" class="centered board"></div>
     <footer class="footer">
       Open source project available on
       <b
