--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
               <option value="negamax_a_b">Negamax-Alpha-Beta</option>
               <option value="negamax_a_b_table">Negamax-Alpha-Beta Table</option>
               <option value="negamax_a_b_quiescent">Negamax-Alpha-Beta Quiescent</option>
-              <!-- <option value="iterative_deepening">Iterative deepening</option> -->
+              <option value="iterative_deepening">Iterative deepening</option>
             </select>
             <br />
             <h3>Choose a Depth</h3>
