--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
               <option value="negamax_a_b_table">Negamax-Alpha-Beta Table</option>
               <option value="negamax_a_b_quiescent">Negamax-Alpha-Beta Quiescent</option>
               <option value="iterative_deepening">Iterative deepening</option>
+              <option value="iterative_deepening_table">Iterative deepening with Table</option>
               <option value="iterative_deepening_order">Iterative deepening with Ordering</option>
             </select>
             <br />
